# lotr.shop

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  build_listings.py  build_master_db.py  crop_upload_images.py  generate_inventory.py  generate_placeholders.py  inventory.csv  mkdocs.yml  my_cards.csv  process_images.py  publish_listings_ebay.py  pyproject.toml  rename_upload_images.py  requirements-docs.txt  requirements.txt  settings.yaml  upload_cdn.py  upload_ebay.py
config/: settings.yaml
data/: inventory.csv  inventory.xlsx  master_cards.csv  my_cards.xlsx
docs/: architecture.md  configuration.md  ebay-sync.md  ebay-upload.md  guide.md  index.md  scripts.md
templates/: description.html
web/: app.py
